--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,4 +17,6 @@
   <link rel="stylesheet" href="/assets/css/styles.min.css" />
 
   <script src="/assets/js/typed.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/three@latest/build/three.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.halo.min.js"></script>
 </head>
