--- a/_layouts/404.html
+++ b/_layouts/404.html
@@ -2,13 +2,10 @@
 layout: default
 ---
 
-<main>
-    <div class="block">
-        <p>404</p>
-        <p>Page not found</p>
-    </div>
-    <div class="block">
-        {% assign home = site.url | split: "//" | slice: 1 %}
-        <a href="{{ site.url }}">{{ home }}</a>
-    </div>
-</main>
+{% assign return = site.url | append: site.baseurl | split: '//' | slice: 1 -%}
+
+<div class="error">
+    <h1>404</h1>
+    <p>Page not found</p>
+    <p class="mt"><a href="{{ site.url | append: site.baseurl }}">{{ return }}</a></p>
+</div>
