--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,10 +1,57 @@
 <!DOCTYPE html>
 
 <html lang="en">
-{% include head.html %}
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>{{ site.title }}</title>
+
+  {% seo title=false %}
+  <link rel="icon" type="image/x-icon" href="{{ 'assets/favicon.ico' | relative_url }}" />
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ 'assets/apple-touch-icon.png' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ 'assets/favicon-32x32.png' | relative_url }}">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ 'assets/favicon-16x16.png' | relative_url }}">
+  <link rel="manifest" href="{{ 'assets/site.webmanifest' | relative_url }}">
+  <link rel="stylesheet" href="{{ 'assets/css/normalize.css' | relative_url }}" />
+  <link rel="stylesheet" href="{{ 'assets/css/open-color.css' | relative_url }}" />
+  <link rel="stylesheet" href="{{ 'assets/css/styles.css' | relative_url }}" />
+  <script src="{{ 'assets/js/typed.umd.js' | relative_url }}"></script>
+</head>
 
 <body>
-  {{ content }}
+  <main>
+
+    {{ content }}
+
+  </main>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"
+    integrity="sha512-334uBDwY0iZ2TklV1OtDtBW9vp7jjP7SWRzT7Ehu1fdtPIjTpCwTSFb8HI/YBau9L1/kRBEOALrS229Kry4yFQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/vanta/0.5.24/vanta.halo.min.js"
+    integrity="sha512-gRIqup64NLSGaR/I3X+mtgekcMOf9mQhmA4dKplXPYpXRUyV3ToH35BE5ftKCHNgWyFb4pMiQzeBEXqXrd4JSg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script>
+    VANTA.HALO({
+      el: document.body,
+      mouseControls: true,
+      touchControls: true,
+      gyroControls: false,
+      minHeight: 500.00,
+      minWidth: 500.00
+    })
+  </script>
+  <script>
+    var typed = new Typed("#typed", {
+      stringsElement: "#strings",
+      backSpeed: 10,
+      typeSpeed: 30,
+      backDelay: 1000,
+      yoyo: 5,
+      loop: true,
+      smartBackspace: true,
+    });
+  </script>
 </body>
 
 </html>
