--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,80 +2,99 @@
 layout: default
 ---
 
-<main class="json">
-  <div class="block">
-    {% if site.json.name %}
-    <p><span class="key">name</span><span class="attr">{{ site.json.name }}</span></p>
-    {% else %}
-    <p><span class="key">name</span><span class="attr">{{ site.title }}</span></p>
-    {% endif %}
-    {% if site.json.description %}
-    {% if site.json.description.first %}
-    <div id="typed-strings">
-      {% for i in site.json.description %}
-      <span>{{ i | prepend: '"' | append: '",'}}</span>
-      {% endfor %}
+{% case site.quotes -%}
+{% when 'keys' -%}
+{% assign quote_key = '"' -%}
+{% assign quote_value = '' -%}
+{% when 'values' -%}
+{% assign quote_key = '' -%}
+{% assign quote_value = '"' -%}
+{% when false -%}
+{% assign quote_key = '' -%}
+{% assign quote_value = '' -%}
+{% else -%}
+{% assign quote_key = '"' -%}
+{% assign quote_value = '"' -%}
+{% endcase -%}
+
+{% if site.commas == false -%}
+{% assign comma = '' -%}
+{% else -%}
+{% assign comma = ',' -%}
+{% endif -%}
+
+{% if site.newtab == true -%}
+{% assign tab = '_blank' -%}
+{% else -%}
+{% assign tab = '_self' -%}
+{% endif -%}
+
+<div id="json">
+  {% for pair in site.data.json %}
+  <div class="my ms">
+    {% if pair.typed -%}
+    <div id="strings">
+      {% for value in pair.value -%}
+      <span>{{ value }}</span>
+      {%- endfor %}
     </div>
-    <p><span class="key">description</span>{% include typed.html %}</p>
-    {% else %}
-    <p><span class="key">description</span><span class="attr">{{ site.json.description }}</span></p>
-    {% endif %}
-    {% else %}
-    <p><span class="key">description</span><span class="attr">{{ site.description }}</span></p>
-    {% endif %}
+    {{ quote_key }}<span class="key">{{ pair.key }}</span>{{ quote_key }}:
+    {{ quote_value }}<span class="value"><span id="typed"></span></span>{{ quote_value }}
+    {%- elsif pair.value.first.key -%}
+    {{ quote_key }}<span class="key">{{ pair.key }}</span>{{ quote_key }}: [
+    {% for value in pair.value -%}
+    {% if value.url -%}
+    <p class="ms">
+      {{ quote_key }}<span class="key">{{ value.key }}</span>{{ quote_key }}:
+      {{ quote_value }}<a class="value" href="{{ value.url | relative_url }}" target="{{ tab }}">{{ value.value }}</a>{{
+      quote_value }}
+      {%- unless forloop.last -%}
+      {{ comma }}
+      {%- endunless %}
+    </p>
+    {% else -%}
+    <p class="ms">
+      {{ quote_key }}<span class="key">{{ value.key }}</span>{{ quote_key }}:
+      {{ quote_value }}<span class="value">{{ value.value }}</span>{{ quote_value }}
+      {%- unless forloop.last -%}
+      {{ comma }}
+      {%- endunless %}
+    </p>
+    {% endif -%}
+    {%- endfor -%}
+    ]
+    {%- elsif pair.value.first -%}
+    {{ quote_key }}<span class="key">{{ pair.key }}</span>{{ quote_key }}: [
+    {% for value in pair.value -%}
+    {% if value.url -%}
+    <p class="ms">
+      {{ quote_value }}<a class="value" href="{{ value.url | relative_url }}" target="{{ tab }}">{{ value.value }}</a>{{
+      quote_value }}
+      {%- unless forloop.last -%}
+      {{ comma }}
+      {%- endunless %}
+    </p>
+    {% else -%}
+    <p class="ms">
+      {{ quote_value }}<span class="value">{{ value }}</span>{{ quote_value }}
+      {%- unless forloop.last -%}
+      {{ comma }}
+      {%- endunless %}
+    </p>
+    {% endif -%}
+    {%- endfor -%}
+    ]
+    {%- elsif pair.url -%}
+    {{ quote_key }}<span class="key">{{ pair.key }}</span>{{ quote_key }}:
+    {{ quote_value }}<a class="value" href="{{ pair.url | relative_url }}" target="{{ tab }}">{{ pair.value }}</a>{{
+    quote_value }}
+    {%- else -%}
+    {{ quote_key }}<span class="key">{{ pair.key }}</span>{{ quote_key }}:
+    {{ quote_value }}<span class="value">{{ pair.value }}</span>{{ quote_value }}
+    {%- endif -%}
+    {%- unless forloop.last -%}
+    {{ comma }}
+    {%- endunless %}
   </div>
-  <div class="block">
-    {% if site.json.cv %}
-    {% assign cv = site.json.cv | split: "/" | slice: -1 %}
-    <p><span class="key">cv</span><span class="attr"><a href="{{ site.json.cv }}" target="_blank">{{ cv }}</a></span></p>
-    {% endif %}
-  </div>
-  <div class="block">
-    {% if site.json.address %}
-    {% if site.json.address.first %}
-    <p><span class="array-key">address</span></p>
-    <div class="array">
-      {% for i in site.json.address %}
-      <p class="array-attr">{{ i }}</p>
-      {% endfor %}
-    </div>
-    {% else %}
-    <p><span class="key">address</span><span class="attr">{{ site.json.address }}</span></p>
-    {% endif %}
-    {% endif %}
-  </div>
-  <div class="block">
-    {% if site.json.contact %}
-    {% if site.json.contact.first %}
-    <p><span class="list-key">contact</span></p>
-    <div class="list">
-      {% for i in site.json.contact %}
-      <p><span class="list-subkey">{{ i | slice: 0 }}</span><span class="list-attr">{{ i | slice: 1 }}</span></p>
-      {% endfor %}
-    </div>
-    {% else %}
-    <p><span class="key">contact</span><span class="attr">{{ site.json.contact }}</span></p>
-    {% endif %}
-    {% endif %}
-  </div>
-  <div class="block">
-    {% if site.json.demo %}
-    {% assign demo = site.json.demo | split: "//" | slice: 1 %}
-    <p><span class="key">demo</span><span class="attr"><a href="{{ site.json.demo }}" target="_blank">{{ demo }}</a></span></p>
-    {% endif %}
-    {% if site.json.source %}
-    {% assign source = site.json.source | split: "github.com/" | slice: 1 %}
-    <p><span class="key">source</span><span class="attr"><a href="{{ site.json.source }}" target="_blank">{{ source }}</a></span></p>
-    {% endif %}
-  </div>
-  <div class="block">
-    {% if site.json.profiles %}
-    <span class="array-key">profiles</span>
-    <div class="array">
-      {% for i in site.json.profiles %}
-      <p class="array-attr"><a href="{{ i | slice: 1 }}" target="_blank">{{ i | slice: 0 }}</a></p>
-      {% endfor %}
-    </div>
-    {% endif %}
-  </div>
-</main>
+  {% endfor %}
+</div>
