--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,8 @@
     {{ content }}
 
   </main>
+  <div class="unity" id="unity">
+  </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"
     integrity="sha512-334uBDwY0iZ2TklV1OtDtBW9vp7jjP7SWRzT7Ehu1fdtPIjTpCwTSFb8HI/YBau9L1/kRBEOALrS229Kry4yFQ=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
@@ -33,12 +35,14 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script>
     VANTA.HALO({
-      el: document.body,
+      el: "#unity",
       mouseControls: true,
       touchControls: true,
       gyroControls: false,
-      minHeight: 500.00,
-      minWidth: 500.00
+      minHeight: 100.00,
+      minWidth: 100.00,
+      baseColor: 0xc15af,
+      backgroundColor: 0x0
     })
   </script>
   <script>
