--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 
 <html lang="en">
+{% seo title=false %}
+{% include analytics.html %}
 
 <head>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ site.title }}</title>
 
-  {% seo title=false %}
   <link rel="icon" type="image/x-icon" href="{{ 'assets/favicon.ico' | relative_url }}" />
   <link rel="apple-touch-icon" sizes="180x180" href="{{ 'assets/apple-touch-icon.png' | relative_url }}">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ 'assets/favicon-32x32.png' | relative_url }}">
