--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,10 +2,8 @@
 
 <html lang="en">
 {% seo title=false %}
-{% include analytics.html %}
 
 <head>
-
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>{{ site.title }}</title>
@@ -19,6 +17,10 @@
   <link rel="stylesheet" href="{{ 'assets/css/open-color.css' | relative_url }}" />
   <link rel="stylesheet" href="{{ 'assets/css/styles.css' | relative_url }}" />
   <script src="{{ 'assets/js/typed.umd.js' | relative_url }}"></script>
+
+  {% if site.google_analytics and jekyll.environment == 'production' %}
+  {% include analytics.html %}
+  {% endif %}
 </head>
 
 <body>
